# todoist-mcp

./: .env.example  .gitignore  PROJECT.md  README.md  package.json  pyproject.toml  tsconfig.json
cli/: index.ts
src/: client.py  server.py
src-api-key/: client.py  main.py  tools.py
src-no-auth/: client.py  main.py  tools.py
src-oauth/: client.py  main.py  tools.py
src/todoist/: config.py  request.py  types.py
src/tools/: __init__.py  comments.py  labels.py  projects.py  sections.py  tasks.py  user.py
